# pa_01_part_2_stu

src/: Makefile  cal.c  cal.h  getDays.s  getDaysOfWeek.s  getFirstDayOfMonth.s  getMonthYear.s  getNumOfDaysInMonth.s  isLeapYear.s
tests/: CMakeLists.txt  Makefile  runGetDaysOfWeekTests  runGetDaysTests  runGetFirstDayOfMonthTests  runGetMonthYearTests  runGetNumOfDaysInMonthTests  runIsLeapYearTests  testGetDays.cpp  testGetDaysOfWeek.cpp  testGetFirstDayOfMonth.cpp  testGetMonthYear.cpp  testGetNumOfDaysInMonth.cpp  testIsLeapYear.cpp
